# pythonProjects

./: .gitignore  Makefile  README.md  duplicate_files.py
blackjack/: main.py
caesar_cipher/: README.md  main.py
calendarmaker/: main.py
duplicate_files/: README.md  duplicate_files.py
password_generator/: README.md  password_generator.py
position-size-calculator/: .python-version  README.md  main.py
thesaurus/: README.md  thesaurus.py
tweet-extractor/: main.py  pyproject.toml
