[tool.poetry]
name = "tweet-extractor"
version = "0.1.0"
description = ""
authors = ["Michael Ansbro <mransbro at gmail dot com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.4.0"
pandas = "^1.3.5"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
